# bpfskeld

./: README.md  meson.build  meson_options.txt
misc/: bpfskeld.service  in.crto.bpfskeld1.conf  print-event.py  print-properties.py
src/: bpf.c  bpf.h  bus.c  bus.h  main.c  manager.c  manager.h  meson.build  utils.c  utils.h
src/bpf/: meson.build  trace-exec-event.h  trace-exec.bpf.c
